@@ -1,3 +1,7 @@
+31/10/2020
+-   New card "Storage"
+-   New Prestige "More Storage", misc section
+
 25/10/2020
 -   "Extreme modding" card
 -   "Better prices scaling" card
